[package]
name = "geng-sciter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geng = { git = "https://github.com/kuviman/geng" }
sciter-rs = { version = "0.5", features = ["windowless"] }
image = "0.24"